# pageindexer

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-test.yml
pageindexer/: main.py
pageindexer/env/: __init__.py
pageindexer/indexer/: __init__.py  document_creator.py  indexer.py
pageindexer/listener/: __init__.py  listener.py
